--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  justify-content: space-around;
+  border-bottom: solid;
 }
 
 .header {
@@ -16,6 +18,9 @@
   display: inline-flex;
   justify-content: flex-end;
   align-items: flex-end;
+  font-family: Verdana;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 ul {
@@ -24,4 +29,14 @@ ul {
   align-items: flex-end;
   flex-direction: row;
   align-content: flex-end;
+}
+
+a, li {
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
+  padding: 5px;
+  color: black;
 }
