--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,20 @@ a, li {
   color: black;
 }
 
+.cats {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
+}
+
+#cats-header {
+  color: white;
+}
+
 footer {
   background-color: mediumaquamarine;
+}
+
+.mytimes {
+  color: white;
+  font-weight:bold;
+  font-size: 20px;
 }
