--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ a, li {
   color: white;
 }
 
+.earth {
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+}
+
 footer {
   background-color: mediumaquamarine;
 }
