added white font color to sections with background images

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ a, li {
 .earth {
   color: white;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
+  font-family: verdana;
+}
+
+.cameras {
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
 }
 
 footer {
