--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
   align-content: space-between;
 }
 
+span {
+  padding-left: 10px;
+}
+
 #header-nav {
   display: inline-flex;
   justify-content: flex-end;
