--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
   border-bottom: solid;
+  border: solid;
+  border-color: black;
+  border-width: thin;
 }
 
 .header {
@@ -64,6 +67,7 @@ a, li {
   display: flex;
   flex-direction: column;
   border-width: thin;
+  width: 630px;
 }
 
 .column-medium {
@@ -72,6 +76,7 @@ a, li {
   display: flex;
   flex-direction: column;
   border-width: thin;
+  width: 300px
 }
 
 .column-small {
@@ -80,6 +85,7 @@ a, li {
   display: flex;
   flex-direction: column;
   border-width: thin;
+  width: 240px
 }
 
 .mother {
