added flex properties for mother box

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,9 @@ a, li {
   font-family: Georgia;
   font-size: 17px;
   color: black;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #mother-header {
