--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ a, li {
   display: flex;
   flex-direction: row;
   border-width: thin;
+  padding-top: 40px;
 }
 
 .column-large {
@@ -68,6 +69,7 @@ a, li {
   flex-direction: column;
   border-width: thin;
   width: 630px;
+  margin-right: 32px;
 }
 
 .column-medium {
@@ -110,7 +112,6 @@ a, li {
   font-size: 40px;
   color: white;
   display: flex;
-  margin-top: 15px;
   height: 300px;
   justify-content: center;
 }
@@ -223,9 +224,6 @@ a, li {
   color: black;
 }
 
-span {
-  display: flex;
-}
 /*
 .news {
   display: flex;
