--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,28 @@ header {
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  display: flex;
   color: mediumaquamarine;
-  align-items: center;
-  align-content: space-between;
   padding-left: 20px;
-  border: solid;
-  border-color: black;
-  border-width: thin;
-  /*padding-right: 30px;*/
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
 }
 
 .logo {
 display: flex;
 align-items: center;
 flex-grow: 1;
-border: solid;
-border-width: thin;
-border-color: black;
+/*border: solid;*/
+/*border-width: thin;*/
+/*border-color: black;*/
 }
 
 .logo span {
@@ -36,21 +40,23 @@ nav span a {
 }
 
 .news {
-  border: solid;
-  border-color: black;
+  /*border: solid;*/
+  /*border-color: black;*/
   display: flex;
   flex-direction: row;
-  border-width: thin;
+  /*border-width: thin;*/
   padding-top: 40px;
   justify-content: center;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
 }
 
 .column {
-  border: solid;
-  border-color: black;
+  /*border: solid;*/
+  /*border-color: black;*/
   display: flex;
   flex-direction: column;
-  border-width: thin;
+  /*border-width: thin;*/
   margin-right: 32px;
 }
 
@@ -67,105 +73,105 @@ nav span a {
 }
 
 .mother {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   font-family: Georgia;
   font-size: 17px;
   color: black;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  display: block;
 }
 
 #mother-header {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
   font-family: Georgia;
   font-weight: bold;
   font-size: 40px;
   color: white;
   display: flex;
+  flex-direction: column;
   height: 300px;
   justify-content: center;
 }
 
+#mother-header span {
+  padding-left: 20px;
+}
+
 .stories {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   font-family: Georgia;
   font-size: 17px;
   color: black;
   display: flex;
   justify-content: space-between;
+  margin-top: 17px;
 }
 
-.orca {
-  border: solid;
-  border-color: black;
-  border-width: thin;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.stories .text-content {
+  height: 250px;
+  display: block;
 }
 
-.burger {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+.narrative {
+  margin-top: 16px;
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.story {
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  width: 300px;
 }
 
 .earth {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 300px;
   margin-top: 15px;
   text-align: center;
-  justify-content: center;
 }
 
 .cameras {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 300px;
   margin-top: 15px;
   text-align: center;
-  justify-content: center;
-}
-
-.story {
-  border: solid;
-  border-color: black;
-  border-width: thin;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
 
 .text-content {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   font-family: Georgia;
   font-size: 17px;
   color: black;
@@ -175,54 +181,84 @@ nav span a {
 }
 
 .cats {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 300px;
   margin-top: 15px;
   text-align: center;
-  justify-content: center;
 }
 
+.cookie {
+  height: 240px;
+}
+
+.news-bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 41px;
+}
 .news-bites {
-  border: solid;
-  border-color: black;
-  border-width: thin;
+  /*border: solid;*/
+  /*border-color: black;*/
+  /*border-width: thin;*/
+  display: block;
 }
 
-.narrative {
-  font-family: Georgia;
-  font-size: 17px;
-  color: black;
+.news-bites .bites {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
 }
 
 footer {
   background-color: mediumaquamarine;
   text-align: center;
+  font-family: Verdana;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  margin: auto;
 }
 
+.info {
+  display: block;
+}
 .title {
   border-right: 2px solid white;
   padding-right: 20px;
   color: white;
   font-family: Georgia;
   font-weight: bold;
+  font-size: 16px;
+  display: inline-block;
 }
 
 footer nav {
   display: inline-block;
-  padding-left: 15px;
-  font-family: verdana;
-  font-size: 12px;
+  padding-left: 25px;
 }
 
 .copyright {
   font-family: verdana;
   font-size: 12px;
+  display: block;
+  padding-top: 10px;
 }
